<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SettingsActivity">
    <androidx.appcompat.widget.Toolbar
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/settings_screen_title"
                android:textColor="@color/colorHeaderText"
                android:textSize="24sp"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:text="@string/settings_locale_label"/>
            <RadioGroup
                    android:id="@+id/localeRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:id="@+id/ruRU"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_locale_ru"
                        android:layout_height="wrap_content"/>
                <RadioButton
                        android:id="@+id/enUS"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_locale_en"
                        android:layout_height="wrap_content"/>
                <RadioButton
                        android:id="@+id/deDE"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_locale_de"
                        android:layout_height="wrap_content"/>
                <RadioButton
                        android:id="@+id/frFR"
                        android:layout_width="wrap_content"
                        android:text="@string/settings_locale_fr"
                        android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:labelFor="@id/questionCount"
                    android:text="@string/settings_amount_label"/>
            <EditText
                    android:id="@+id/questionCount"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_gravity="center"
                    tools:ignore="Autofill"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>